--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id='app'></div>
-    <script type='text/javascript' src='./js/bundle.js'></script>
+    <script type='text/javascript' src='./js/bundle.jsx'></script>
   </body>
 </html>
